game over modal

--- a/public/desktop/index.html
+++ b/public/desktop/index.html
@@ -84,6 +84,11 @@
       <div id="ThreeJS"></div>
       <div class="counter"></div>
     </section>
+
+    <section class="game-over-container fade-out">
+      <h2>Game Over</h2>
+      <p>Your Score: <span class="score">0</span></p>
+    </section>
     <audio src="./sound/explode.wav" preload="auto" id="explode_sound"></audio>
 
     <script type="text/javascript" src="./../socket.io/socket.io.js"></script>
