--- a/public/desktop/index.html
+++ b/public/desktop/index.html
@@ -88,6 +88,17 @@
     <section class="game-over-container fade-out">
       <h2>Game Over</h2>
       <p>Your Score: <span class="score">0</span></p>
+
+      <div class='credits'>
+        <h5>Credits</h5>
+        <ul>
+          <li><a href="https://sketchfab.com/3d-models/muscle-car-white-cc19fd1722124b0eb8e363712f931c24" target=”_blank”>Car Model</a></li>
+          <li><a href='https://sketchfab.com/3d-models/wooden-barricade-4de45fef6da2497c828ef76d195e9f7f' target=”_blank”>Barricade Model</a></li>
+          <li><a href='https://www.freesoundeffects.com/free-track/explosion-5-466450/' target=”_blank”>Explosion Sound</a></li>
+          <li><a href='https://pixabay.com/music/upbeat-heavy-racing-151129/' target=”_blank”>Sound Track</a></li>
+          </ul>
+      </div>
+      
     </section>
     <audio src="./sound/explode.wav" preload="auto" id="explode_sound"></audio>
 
