how to play instructions

--- a/public/desktop/index.html
+++ b/public/desktop/index.html
@@ -34,6 +34,19 @@
           src="./assets/car.svg"
           alt="icon showing how to place the phone in the middle of the skateboard"
         />
+        <div class="">
+          <h4>How to play</h4>
+          <ol>
+            <li>
+              Hold your mobile device vertically or in portrait mode.
+            </li>
+            <li>
+              Now, tilt your device left or right to steer the car in the
+              corresponding direction.
+            </li>
+          </ol>
+        </div>
+
       </div>
     </section>
     <section class="game">
