--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -15,6 +15,19 @@
     <main id="mobile">
       <h1 class="title">RoadRunner</h1>
       <img src="car.svg" alt="" />
+
+      <div class="">
+        <h4>How to play</h4>
+        <ol>
+          <li>
+              Hold your mobile device vertically or in portrait mode.
+            </li>
+          <li>
+            Now, tilt your device left or right to steer the car in the
+            corresponding direction.
+          </li>
+        </ol>
+      </div>
       <button id="start">Start</button>
     </main>
 
